# qbit-ops

./: .cursorignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  release-please.yml
app/: __init__.py  backup.py  config.py  main.py  torrents.py  trackers.py
tests/: test_backup.py  test_config.py  test_main.py  test_torrents.py  test_trackers.py
